HTML5-CSS3_IDTECH_Project Completed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <img src="assets/img/banner_bottom_icon_right.svg" alt="" />
             </a>
           </div>
-          <div class="main_banner_bottom_item">
+          <div class="main_banner_bottom_item main_banner_bottom_itemTwo">
             <a class="main_banner_bottom_icon">
               <img src="assets/img/banner_bottom_icon_left.svg" alt="" />
             </a>
@@ -151,7 +151,7 @@
               <img src="assets/img/banner_bottom_icon_right.svg" alt="" />
             </a>
           </div>
-          <div class="main_banner_bottom_item">
+          <div class="main_banner_bottom_item main_banner_bottom_itemThree">
             <a class="main_banner_bottom_icon">
               <img src="assets/img/banner_bottom_icon_left.svg" alt="" />
             </a>
@@ -408,15 +408,23 @@
             <p class="main_circleCards_item_top_number">01</p>
           </div>
           <div class="main_circleCards_item_bottom">
-            <div class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_left">
+            <div
+              class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_left"
+            >
               <i class="fa-solid fa-chevron-left"></i>
             </div>
-            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <i
+              class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"
+            ></i>
             <div class="main_circleCards_item_bottom_text">
-              <h2 class="main_circleCards_item_bottom_text_title">3D Conception</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">
+                3D Conception
+              </h2>
               <h2 class="main_circleCards_item_bottom_text_title">& Design</h2>
             </div>
-            <div class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_right">
+            <div
+              class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_right"
+            >
               <i class="fa-solid fa-chevron-right"></i>
             </div>
           </div>
@@ -426,9 +434,13 @@
             <p class="main_circleCards_item_top_number">02</p>
           </div>
           <div class="main_circleCards_item_bottom">
-            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <i
+              class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"
+            ></i>
             <div class="main_circleCards_item_bottom_text">
-              <h2 class="main_circleCards_item_bottom_text_title">Interaction</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">
+                Interaction
+              </h2>
               <h2 class="main_circleCards_item_bottom_text_title">Design</h2>
             </div>
           </div>
@@ -438,10 +450,14 @@
             <p class="main_circleCards_item_top_number">03</p>
           </div>
           <div class="main_circleCards_item_bottom">
-            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <i
+              class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"
+            ></i>
             <div class="main_circleCards_item_bottom_text">
               <h2 class="main_circleCards_item_bottom_text_title">VR World</h2>
-              <h2 class="main_circleCards_item_bottom_text_title">User Testing</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">
+                User Testing
+              </h2>
             </div>
           </div>
         </div>
@@ -450,7 +466,9 @@
             <p class="main_circleCards_item_top_number">04</p>
           </div>
           <div class="main_circleCards_item_bottom">
-            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <i
+              class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"
+            ></i>
             <div class="main_circleCards_item_bottom_text">
               <h2 class="main_circleCards_item_bottom_text_title">Hydra VR</h2>
               <h2 class="main_circleCards_item_bottom_text_title">Deploy</h2>
@@ -466,12 +484,37 @@
         </div>
         <form class="main_register_form" action="">
           <div class="main_register_form_main">
-            <input class="main_register_form_main_input" type="text" placeholder="Fist Name">
-            <input class="main_register_form_main_input" type="text" placeholder="Last Name">
-            <input class="main_register_form_main_input" type="email" placeholder="Email">
-            <input class="main_register_form_main_input" type="tel" placeholder="Phone Number">
-            <input class="main_register_form_main_input" type="text" placeholder="Subject">
-            <textarea  class="main_register_form_main_input main_register_form_main_input_text" placeholder="Tell Us Something..." name="" id=""></textarea>
+            <input
+              class="main_register_form_main_input"
+              type="text"
+              placeholder="Fist Name"
+            />
+            <input
+              class="main_register_form_main_input"
+              type="text"
+              placeholder="Last Name"
+            />
+            <input
+              class="main_register_form_main_input"
+              type="email"
+              placeholder="Email"
+            />
+            <input
+              class="main_register_form_main_input"
+              type="tel"
+              placeholder="Phone Number"
+            />
+            <input
+              class="main_register_form_main_input"
+              type="text"
+              placeholder="Subject"
+            />
+            <textarea
+              class="main_register_form_main_input main_register_form_main_input_text"
+              placeholder="Tell Us Something..."
+              name=""
+              id=""
+            ></textarea>
           </div>
           <button class="main_register_form_button">SEND TO HYDRA</button>
         </form>
@@ -481,30 +524,76 @@
     <footer class="footer">
       <div class="footer_top">
         <div class="footer_top_logo">
-          <img class="footer_top_logo_img" src="assets/img/logo.svg" alt="logo_img">
+          <img
+            class="footer_top_logo_img"
+            src="assets/img/logo.svg"
+            alt="logo_img"
+          />
         </div>
         <ul class="footer_top_menu">
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">ABOUT</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">SERVICES</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">TECHNOLOGIES</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">HOW TO</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">JOIN HYDRA</a></li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">ABOUT</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">SERVICES</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">TECHNOLOGIES</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">HOW TO</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">JOIN HYDRA</a>
+          </li>
         </ul>
         <ul class="footer_top_menu">
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">F.A.Q</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">SITEMAP</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">CONDITIONS</a></li>
-          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">LICENSES</a></li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">F.A.Q</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">SITEMAP</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">CONDITIONS</a>
+          </li>
+          <li class="footer_top_menu_item">
+            <a class="footer_top_menu_item_link" href="#">LICENSES</a>
+          </li>
         </ul>
         <div class="footer_top_about">
           <p class="footer_top_about_title">SOCIALIZE WITH HYDRA</p>
           <ul class="footer_top_about_media">
-            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-facebook"></i></li>
-            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-twitter"></i></li>
-            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-linkedin-in"></i></li>
-            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-youtube"></i></li>
-            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-instagram"></i></li>
-            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-pinterest"></i></li>
+            <li class="footer_top_about_media_item">
+              <i
+                class="footer_top_about_media_item_icon fa-brands fa-facebook"
+              ></i>
+            </li>
+            <li class="footer_top_about_media_item">
+              <i
+                class="footer_top_about_media_item_icon fa-brands fa-twitter"
+              ></i>
+            </li>
+            <li class="footer_top_about_media_item">
+              <i
+                class="footer_top_about_media_item_icon fa-brands fa-linkedin-in"
+              ></i>
+            </li>
+            <li class="footer_top_about_media_item">
+              <i
+                class="footer_top_about_media_item_icon fa-brands fa-youtube"
+              ></i>
+            </li>
+            <li class="footer_top_about_media_item">
+              <i
+                class="footer_top_about_media_item_icon fa-brands fa-instagram"
+              ></i>
+            </li>
+            <li class="footer_top_about_media_item">
+              <i
+                class="footer_top_about_media_item_icon fa-brands fa-pinterest"
+              ></i>
+            </li>
           </ul>
           <button class="footer_top_about_button">BUILD YOUR WORLD</button>
         </div>
