HTML5-CSS3_IDTECH_Project Completed

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           /></a>
         </nav>
       </header>
-  
+
       <main class="main">
         <section class="main_banner">
           <div class="main_banner_top">
@@ -83,8 +83,8 @@
               </div>
               <p class="main_banner_top_text_paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore nisl tincidunt eget.
-                Lectus mauris eros in vitae .
+                eiusmod tempor incididunt ut labore et dolore nisl tincidunt
+                eget. Lectus mauris eros in vitae .
               </p>
               <div class="main_banner_top_text_button">
                 <a class="main_banner_top_text_button_link" href="#"
@@ -181,7 +181,7 @@
             </div>
           </div>
         </section>
-  
+
         <section class="main_introduction_and_build">
           <div class="main_introduction_and_build_title">
             <h2 class="main_introduction_and_build_title_primary">
@@ -202,11 +202,11 @@
             Vitae sapien pellentesque habitant morbi tristique senectus et netus
             et. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit
             amet mauris commodo quis imperdiet massa tincidunt nunc. Viverra
-            aliquet eget sit amet tellus. Ornare lectus sit amet est placerat in.
-            Lectus magna fringilla urna porttitor rhoncus vitae.
+            aliquet eget sit amet tellus. Ornare lectus sit amet est placerat
+            in. Lectus magna fringilla urna porttitor rhoncus vitae.
           </p>
         </section>
-  
+
         <section class="main_about">
           <div class="main_about_img">
             <img
@@ -225,13 +225,14 @@
                 Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus
                 mattis rhoncus urna neque viverra justo. Vivamus at augue eget
                 arcu dictum. Ultrices gravida dictum fusce ut placerat orci.
-                Aenean et tortor at risus viverra adipiscing at in. Mattis aliquam
-                faucibus purus in massa. Est placerat in egestas erat imperdiet
-                sed. Consequat semper viverra nam libero justo laoreet sit amet.
-                Aliquam etiam erat velit scelerisque in dictum non consectetur a.
-                Laoreet sit amet cursus sit amet. Vel eros donec ac odio tempor
-                orci dapibus. Sem nulla pha retra diam sit amet nisl suscipit
-                adipiscing bibendum. Leo a diam sollicitudi n tempor.
+                Aenean et tortor at risus viverra adipiscing at in. Mattis
+                aliquam faucibus purus in massa. Est placerat in egestas erat
+                imperdiet sed. Consequat semper viverra nam libero justo laoreet
+                sit amet. Aliquam etiam erat velit scelerisque in dictum non
+                consectetur a. Laoreet sit amet cursus sit amet. Vel eros donec
+                ac odio tempor orci dapibus. Sem nulla pha retra diam sit amet
+                nisl suscipit adipiscing bibendum. Leo a diam sollicitudi n
+                tempor.
               </p>
               <button class="main_about_cards_bottom_button">
                 LET’S GET IN TOUCH
@@ -239,7 +240,7 @@
             </div>
           </div>
         </section>
-  
+
         <section class="main_introduction_and_build">
           <div class="main_introduction_and_build_title">
             <h2 class="main_introduction_and_build_title_primary">WHY BUILD</h2>
@@ -258,11 +259,11 @@
             Vitae sapien pellentesque habitant morbi tristique senectus et netus
             et. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit
             amet mauris commodo quis imperdiet massa tincidunt nunc. Viverra
-            aliquet eget sit amet tellus. Ornare lectus sit amet est placerat in.
-            Lectus magna fringilla urna porttitor rhoncus vitae.
+            aliquet eget sit amet tellus. Ornare lectus sit amet est placerat
+            in. Lectus magna fringilla urna porttitor rhoncus vitae.
           </p>
         </section>
-  
+
         <section class="main_cards">
           <div class="main_cards_item main_cards_item_one">
             <div class="main_cards_icon main_cards_icon_left">
@@ -331,7 +332,7 @@
             <button class="main_cards_item_button">TRY IT NOW</button>
           </div>
         </section>
-  
+
         <section class="main_tech">
           <div class="main_tech_image">
             <h2 class="main_tech_image_title">TECHNOLOGIES & HARDWARE</h2>
@@ -377,7 +378,7 @@
             </div>
           </div>
         </section>
-  
+
         <section class="main_introduction_and_build">
           <div class="main_introduction_and_build_title">
             <h2 class="main_introduction_and_build_title_primary">
@@ -398,11 +399,11 @@
             Vitae sapien pellentesque habitant morbi tristique senectus et netus
             et. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit
             amet mauris commodo quis imperdiet massa tincidunt nunc. Viverra
-            aliquet eget sit amet tellus. Ornare lectus sit amet est placerat in.
-            Lectus magna fringilla urna porttitor rhoncus vitae.
+            aliquet eget sit amet tellus. Ornare lectus sit amet est placerat
+            in. Lectus magna fringilla urna porttitor rhoncus vitae.
           </p>
         </section>
-  
+
         <section class="main_circleCards">
           <div class="main_circleCards_item main_circleCards_itemOne">
             <div class="main_circleCards_item_top">
@@ -421,7 +422,9 @@
                 <h2 class="main_circleCards_item_bottom_text_title">
                   3D Conception
                 </h2>
-                <h2 class="main_circleCards_item_bottom_text_title">& Design</h2>
+                <h2 class="main_circleCards_item_bottom_text_title">
+                  & Design
+                </h2>
               </div>
               <div
                 class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_right"
@@ -455,7 +458,9 @@
                 class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"
               ></i>
               <div class="main_circleCards_item_bottom_text">
-                <h2 class="main_circleCards_item_bottom_text_title">VR World</h2>
+                <h2 class="main_circleCards_item_bottom_text_title">
+                  VR World
+                </h2>
                 <h2 class="main_circleCards_item_bottom_text_title">
                   User Testing
                 </h2>
@@ -471,13 +476,15 @@
                 class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"
               ></i>
               <div class="main_circleCards_item_bottom_text">
-                <h2 class="main_circleCards_item_bottom_text_title">Hydra VR</h2>
+                <h2 class="main_circleCards_item_bottom_text_title">
+                  Hydra VR
+                </h2>
                 <h2 class="main_circleCards_item_bottom_text_title">Deploy</h2>
               </div>
             </div>
           </div>
         </section>
-  
+
         <section class="main_register">
           <div class="main_register_top">
             <h2 class="main_register_top_title">JOIN HYDRA</h2>
@@ -521,7 +528,7 @@
           </form>
         </section>
       </main>
-  
+
       <footer class="footer">
         <div class="footer_top">
           <div class="footer_top_logo">
@@ -606,7 +613,6 @@
         </div>
       </footer>
     </div>
-   
 
     <script
       src="https://kit.fontawesome.com/1a5bc9c570.js"
